# LLM-RAG-WIKI

./: AGENTS.md  CHANGELOG.md  GETTING_STARTED.md  LICENSE  MASTER.md  README.md  START-PROMPT.md  config.yaml  log.md  project.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/chatmodes/: llm-wiki-builder.chatmode.md  spark-builder.chatmode.md
.github/workflows/: dependabot-sync.yml  labeler.yml  release.yml  ruff-pr-review.yml
adr/: ADR-0001-mcp-runtime-phases.md  ADR-0002-glossary-indexing.md  ADR-0003-spark-surface-boundary.md
docs/: CODE_INSPECTION.md  Deep Improvement Audit.md  GitHub Spark Readiness.md
scripts/: run_phase.sh  start_bridge.sh
spark/: .env.example  README.md  index.html  package-lock.json  package.json  spark.manifest.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
spark/src/: App.tsx  main.tsx  types.ts
src/persona_mcp/: __init__.py  compiler.py  server.py  store.py
src/rag/: _query_store.py  config.py  eval_runner.py  ingest.py  manifest.py  reranker.py  retrieve.py  security.py  snapshot.py
src/spark_bridge/: __init__.py  app.py  auth.py  schemas.py
src/wiki/: autoconvert.sh  glossary.py  graph_lint.py  ingest.py  install_cron.sh  lint_cron.sh
templates/: SCHEMA.md
tests/: conftest.py  test_autoconvert.py  test_chunker.py  test_config.py  test_cron_ops.py  test_graph_lint.py  test_ingest.py  test_ingest_rag.py  test_init.py  test_integration.py  test_manifest.py  test_query_synthesis.py  test_retrieve.py  test_spark_bridge.py
(+5 files in other folders)
